force-app/main/default/objects/Migration_Log__c/Migration_Log__c.object-meta.xml
<CustomObject>
    <label>Migration Log</label>
    <pluralLabel>Migration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>LOG-{000000}</displayFormat>
    </nameField>
</CustomObject>