force-app/main/default/objects/Migration_Log__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <label>Error Message</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>