force-app/main/default/objects/Migration_Log__c/fields/MigrationDate__c.field-meta.xml
<CustomField>
    <fullName>MigrationDate__c</fullName>
    <label>Migration Date</label>
    <type>Date</type>
</CustomField>