force-app/main/default/objects/Migration_Log__c/fields/MigrationStatus__c.field-meta.xml
<CustomField>
    <fullName>MigrationStatus__c</fullName>
    <label>Migration Status</label>
    <type>Text</type>
    <length>255</length>
</CustomField>