force-app/main/default/objects/Migration_Log__c/fields/ValidationStatus__c.field-meta.xml
<CustomField>
    <fullName>ValidationStatus__c</fullName>
    <label>Validation Status</label>
    <description>Tracks the validation outcome for this migration log entry. Used by the ARMT_ValidationService to classify issues as Blocker, Warning, or Info.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Blocker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>